--- a/Runtime.Rpi5/Configuration/Debug.cfg
+++ b/Runtime.Rpi5/Configuration/Debug.cfg
@@ -2,7 +2,7 @@ source [find interface/cmsis-dap.cfg]
 
 set _CHIP bcm2712
 set _CORES 4
-set _USE_SMP 0
+set _USE_SMP 1
 
 reset_config trst_and_srst
 transport select swd
@@ -18,12 +18,16 @@ set _CTIBASE {0x80020000 0x80120000 0x80220000 0x80320000}
 
 set _smp_command "target smp"
 
-for { set _core 0 } { $_core < $_CORES } { incr _core } {
-    set _CTINAME $_CHIP.cti$_core
-    set _TARGETNAME $_CHIP.cpu$_core
+for { set _CORE 0 } { $_CORE < $_CORES } { incr _CORE } {
+    set _CTINAME $_CHIP.cti$_CORE
+    set _TARGETNAME $_CHIP.cpu$_CORE
 
-    cti create $_CTINAME -dap $_CHIP.dap -ap-num 0 -baseaddr [lindex $_CTIBASE $_core]
-    target create $_TARGETNAME aarch64 -dap $_CHIP.dap -ap-num 0 -dbgbase [lindex $_DBGBASE $_core] -cti $_CTINAME
+    cti create $_CTINAME -dap $_CHIP.dap -ap-num 0 -baseaddr [lindex $_CTIBASE $_CORE]
+    target create $_TARGETNAME aarch64 -dap $_CHIP.dap -ap-num 0 -dbgbase [lindex $_DBGBASE $_CORE]
+
+    $_TARGETNAME configure -coreid $_CORE
+    $_TARGETNAME configure -cti $_CTINAME
+    $_TARGETNAME configure -rtos hwthread
 
     set _smp_command "$_smp_command $_TARGETNAME"
     }
@@ -32,5 +36,5 @@ if {$_USE_SMP} { eval $_smp_command }
 
 targets $_CHIP.cpu0
 
-init
-reset halt
+#init
+#reset halt
