--- a/Runtime.Rpi5/Runtime.Rpi5.vcxitems.filters
+++ b/Runtime.Rpi5/Runtime.Rpi5.vcxitems.filters
@@ -21,6 +21,18 @@
     <ClCompile Include="$(MSBuildThisFileDirectory)Devices\Gpio\GpioHelper.cpp">
       <Filter>Devices\Gpio</Filter>
     </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)Devices\Emmc\EmmcHost.cpp">
+      <Filter>Devices\Emmc</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)Devices\Pcie\PcieHost.cpp">
+      <Filter>Devices\Pcie</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)Devices\Serial\SerialPort.cpp">
+      <Filter>Devices\Serial</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)Devices\Gpio\GpioHost.cpp">
+      <Filter>Devices\Gpio</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(MSBuildThisFileDirectory)IntelliSense.h" />
@@ -51,6 +63,28 @@
     <ClInclude Include="$(MSBuildThisFileDirectory)Devices\Gpio\GpioHelper.h">
       <Filter>Devices\Gpio</Filter>
     </ClInclude>
+    <ClInclude Include="$(MSBuildThisFileDirectory)Devices\Emmc\EmmcHost.h">
+      <Filter>Devices\Emmc</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MSBuildThisFileDirectory)Devices\Emmc\Emmc.h">
+      <Filter>Devices\Emmc</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MSBuildThisFileDirectory)Devices\System\Soc.h">
+      <Filter>Devices\System</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MSBuildThisFileDirectory)Devices\Pcie\Pcie.h">
+      <Filter>Devices\Pcie</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MSBuildThisFileDirectory)Devices\Pcie\PcieHost.h">
+      <Filter>Devices\Pcie</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MSBuildThisFileDirectory)Devices\Serial\SerialPort.h">
+      <Filter>Devices\Serial</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MSBuildThisFileDirectory)Devices\Gpio\GpioHost.h">
+      <Filter>Devices\Gpio</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MSBuildThisFileDirectory)cstddef" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Configuration">
@@ -67,6 +101,15 @@
     </Filter>
     <Filter Include="Devices\Gpio">
       <UniqueIdentifier>{605f50fa-4556-45f8-bc01-9b5daa298ea6}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Devices\Emmc">
+      <UniqueIdentifier>{dce6942c-2dda-4212-abaa-7f6da8ab54e9}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Devices\Pcie">
+      <UniqueIdentifier>{c571a4a4-e467-44c5-8a28-2469e2ec1257}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Devices\Serial">
+      <UniqueIdentifier>{870ee661-e3a2-49ea-91ff-ea7a7e88ec14}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
