--- a/Runtime.Rpi5/Runtime.Rpi5.vcxitems.filters
+++ b/Runtime.Rpi5/Runtime.Rpi5.vcxitems.filters
@@ -137,5 +137,6 @@
     <None Include="$(MSBuildThisFileDirectory)Configuration\Debug.cfg">
       <Filter>Configuration</Filter>
     </None>
+    <None Include="$(MSBuildThisFileDirectory)mmu.S" />
   </ItemGroup>
 </Project>
