--- a/Runtime.Rpi5/linker.ld.in
+++ b/Runtime.Rpi5/linker.ld.in
@@ -64,6 +64,10 @@ SECTIONS
 
 .nodata (NOLOAD) :
 	{
+	. = ALIGN(4096);
+	__page_table_start = .;
+	. += 4096;
+	__page_table_end = .;
 	*(.nodata .nodata.*)
 	}
 
