--- a/Blink/Blink.vcxproj
+++ b/Blink/Blink.vcxproj
@@ -3,10 +3,6 @@
   <Import Project="..\Runtime\Configuration\Platform.props" />
   <PropertyGroup Label="Globals">
     <ProjectGuid>{0A8C397A-DB1A-41FA-966B-358CE4352EB4}</ProjectGuid>
-    <SccProjectName>$/Examples/Blink/Blink</SccProjectName>
-    <SccAuxPath>https://svenbieg.visualstudio.com</SccAuxPath>
-    <SccLocalPath>.</SccLocalPath>
-    <SccProvider>{4CA58AB2-18FA-4F8D-95D4-32DDF27D184C}</SccProvider>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <Import Project="..\Runtime\Configuration\Default.props" />
@@ -16,15 +12,18 @@
   <ImportGroup Label="Shared">
     <Import Project="..\Runtime\Runtime.vcxitems" Label="Shared" />
     <Import Project="..\Runtime.Rpi5\Runtime.Rpi5.vcxitems" Label="Shared" Condition="'$(Platform)'=='Rpi5'" />
-    <Import Project="..\Scheduler\Scheduler.vcxitems" Label="Shared" />
     <Import Project="..\Default\Default.vcxitems" Label="Shared" />
+    <Import Project="..\Scheduler\Scheduler.vcxitems" Label="Shared" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros" />
   <Import Project="..\Runtime\Configuration\Compiler.props" />
   <ItemDefinitionGroup />
   <ItemGroup>
-    <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Application.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Application.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <Import Project="..\Runtime\Configuration\Platform.targets" />
