--- a/Runtime.Rpi5/Runtime.Rpi5.vcxitems.filters
+++ b/Runtime.Rpi5/Runtime.Rpi5.vcxitems.filters
@@ -24,12 +24,6 @@
     <ClCompile Include="$(MSBuildThisFileDirectory)Devices\Emmc\EmmcHost.cpp">
       <Filter>Devices\Emmc</Filter>
     </ClCompile>
-    <ClCompile Include="$(MSBuildThisFileDirectory)Storage\FlashMemory.cpp">
-      <Filter>Storage</Filter>
-    </ClCompile>
-    <ClCompile Include="$(MSBuildThisFileDirectory)Storage\PartitionTable.cpp">
-      <Filter>Storage</Filter>
-    </ClCompile>
     <ClCompile Include="$(MSBuildThisFileDirectory)Devices\Pcie\PcieHost.cpp">
       <Filter>Devices\Pcie</Filter>
     </ClCompile>
@@ -69,9 +63,6 @@
     <ClInclude Include="$(MSBuildThisFileDirectory)stddef.h" />
     <ClInclude Include="$(MSBuildThisFileDirectory)unwind.h" />
     <ClInclude Include="$(MSBuildThisFileDirectory)base.h" />
-    <ClInclude Include="$(MSBuildThisFileDirectory)Storage\FlashMemory.h">
-      <Filter>Storage</Filter>
-    </ClInclude>
     <ClInclude Include="$(MSBuildThisFileDirectory)Devices\Gpio\GpioHelper.h">
       <Filter>Devices\Gpio</Filter>
     </ClInclude>
@@ -80,9 +71,6 @@
     </ClInclude>
     <ClInclude Include="$(MSBuildThisFileDirectory)Devices\Emmc\Emmc.h">
       <Filter>Devices\Emmc</Filter>
-    </ClInclude>
-    <ClInclude Include="$(MSBuildThisFileDirectory)Storage\PartitionTable.h">
-      <Filter>Storage</Filter>
     </ClInclude>
     <ClInclude Include="$(MSBuildThisFileDirectory)Devices\System\Soc.h">
       <Filter>Devices\System</Filter>
@@ -103,6 +91,7 @@
     <ClInclude Include="$(MSBuildThisFileDirectory)Devices\System\MailBox.h">
       <Filter>Devices\System</Filter>
     </ClInclude>
+    <ClInclude Include="$(MSBuildThisFileDirectory)Platform.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Configuration">
@@ -116,9 +105,6 @@
     </Filter>
     <Filter Include="Devices\Timers">
       <UniqueIdentifier>{139bd0a9-020c-4e62-a3a5-3c1279770a5d}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Storage">
-      <UniqueIdentifier>{3114767f-77b5-4f19-81ee-1033bdc7847d}</UniqueIdentifier>
     </Filter>
     <Filter Include="Devices\Gpio">
       <UniqueIdentifier>{605f50fa-4556-45f8-bc01-9b5daa298ea6}</UniqueIdentifier>
