--- a/Runtime.Rpi5/Configuration/Tools.targets
+++ b/Runtime.Rpi5/Configuration/Tools.targets
@@ -1,6 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?> 
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 
+  <Target Name="DownloadFirmware" Condition="!Exists('$(FirmwarePath)')" BeforeTargets="Build">
+    <Message Text="Downloading Firmware..." Importance="High" />
+    <DownloadFile SourceUrl="https://github.com/raspberrypi/firmware/raw/refs/heads/master/boot/bcm2712-rpi-5-b.dtb" DestinationFolder="$(SolutionDir)Firmware" />
+    <DownloadFile SourceUrl="https://github.com/RPi-Distro/firmware-nonfree/raw/refs/heads/trixie/debian/config/brcm80211/cypress/cyfmac43455-sdio-minimal.bin" DestinationFolder="$(FirmwarePath)" />
+    <DownloadFile SourceUrl="https://github.com/RPi-Distro/firmware-nonfree/raw/refs/heads/trixie/debian/config/brcm80211/brcm/brcmfmac43455-sdio.txt" DestinationFolder="$(FirmwarePath)" />
+  </Target>
+
+  <Target Name="CreateConfig" AfterTargets="Build">
+    <ItemGroup>
+      <ConfigLines Include="enable_jtag_gpio=1" />
+      <ConfigLines Include="kernel=$(TargetName)$(TargetExt)" />
+    </ItemGroup>
+    <WriteLinesToFile File="$(FirmwarePath)config.txt" Lines="@(ConfigLines)" Overwrite="true" />
+  </Target>
+
   <Target Name="InstallCompiler" Condition="!Exists('$(CompilerPath)')">
     <Message Text="Installing Compiler..." Importance="High" />
     <DownloadFile SourceUrl="https://developer.arm.com/-/media/Files/downloads/gnu/14.3.rel1/binrel/arm-gnu-toolchain-14.3.rel1-mingw-w64-i686-aarch64-none-elf.zip" DestinationFolder="$(TEMP)" Condition="!Exists('$(TEMP)\arm-gnu-toolchain-14.2.rel1-mingw-w64-i686-aarch64-none-elf.zip')" />
