--- a/Runtime.Rpi5/Configuration/Tools.props
+++ b/Runtime.Rpi5/Configuration/Tools.props
@@ -8,4 +8,8 @@
     <CompilerVersion>14.3.1</CompilerVersion>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <FirmwarePath>$(SolutionDir)Firmware\</FirmwarePath>
+  </PropertyGroup>
+
 </Project>
