--- a/Runtime/Configuration/Compiler.props
+++ b/Runtime/Configuration/Compiler.props
@@ -2,7 +2,7 @@
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 
   <PropertyGroup>
-    <AdditionalOptions>$(AdditionalOptions) /Zc:__cplusplus /std:c++26</AdditionalOptions>
+    <AdditionalOptions>$(AdditionalOptions) /Zc:__cplusplus /std:c++latest /std:clatest</AdditionalOptions>
     <CompilerFlags>$(CompilerFlags) -fdata-sections -ffunction-sections</CompilerFlags>
     <CompilerFlags>$(CompilerFlags) -fno-builtin -funwind-tables -nostartfiles</CompilerFlags>
     <CompilerFlags>$(CompilerFlags) -O0</CompilerFlags>
