--- a/Scheduler/Scheduler.vcxitems.filters
+++ b/Scheduler/Scheduler.vcxitems.filters
@@ -30,6 +30,12 @@
     <ClCompile Include="$(MSBuildThisFileDirectory)Concurrency\SpinLock.cpp">
       <Filter>Concurrency</Filter>
     </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)Concurrency\WriteLock.cpp">
+      <Filter>Concurrency</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)Concurrency\ReadLock.cpp">
+      <Filter>Concurrency</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(MSBuildThisFileDirectory)Concurrency\CriticalSection.h">
