--- a/Runtime/Configuration/Default.props
+++ b/Runtime/Configuration/Default.props
@@ -12,6 +12,7 @@
   </PropertyGroup>
 
   <PropertyGroup>
+    <AdditionalOptions>$(AdditionalOptions) /Zc:__cplusplus /std:c++latest /std:clatest</AdditionalOptions>
     <HomePath>$(HOMEDRIVE)$(HOMEPATH)\</HomePath>
     <IntDir>$(SolutionDir)$(Configuration)\$(Platform)\</IntDir>
     <OutDir>$(SolutionDir)$(Configuration)\$(Platform)\</OutDir>
