--- a/Runtime/Configuration/Tools.props
+++ b/Runtime/Configuration/Tools.props
@@ -12,8 +12,8 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <OpenOcdPath>$(HomePath)gcc\openocd-x64-standalone\</OpenOcdPath>
-    <OpenOcdExe>$(OpenOcdPath)openocd.exe</OpenOcdExe>
+    <OpenOcdPath>$(HomePath)gcc\openocd-3e86eaa-i686-w64-mingw32\</OpenOcdPath>
+    <OpenOcdExe>$(OpenOcdPath)bin\openocd.exe</OpenOcdExe>
     <OpenOcdServer>localhost</OpenOcdServer>
     <OpenOcdPort>3333</OpenOcdPort>
   </PropertyGroup>
