--- a/Runtime/Configuration/Tools.targets
+++ b/Runtime/Configuration/Tools.targets
@@ -15,15 +15,15 @@
     <Exec Command="winget install --id Git.Git -e --source winget" />
   </Target>
 
-  <Target Name="DownloadOpenOcd" Condition="!Exists('$(TEMP)\openocd-x64-standalone.zip')">
+  <Target Name="DownloadOpenOcd" Condition="!Exists('$(TEMP)\openocd-3e86eaa-i686-w64-mingw32.tar.gz')">
     <Message Text="Downloading OpenOCD..." Importance="High" />
-    <DownloadFile SourceUrl="https://github.com/raspberrypi/pico-setup-windows/releases/download/v1.5.1/openocd-x64-standalone.zip" DestinationFolder="$(TEMP)" />
+    <DownloadFile SourceUrl="https://github.com/openocd-org/openocd/releases/download/latest/openocd-3e86eaa-i686-w64-mingw32.tar.gz" DestinationFolder="$(TEMP)" />
   </Target>
 
   <Target Name="InstallOpenOcd" Condition="!Exists('$(OpenOcdExe)')" DependsOnTargets="DownloadOpenOcd">
     <Message Text="Installing OpenOCD..." Importance="High" />
     <MakeDir Directories="$(OpenOcdPath)" />
-    <Exec Command="tar -x -f $(TEMP)\openocd-x64-standalone.zip" WorkingDirectory="$(OpenOcdPath)" />
+    <Exec Command="tar -x -f $(TEMP)\openocd-3e86eaa-i686-w64-mingw32.tar.gz" WorkingDirectory="$(OpenOcdPath)" />
   </Target>
 
   <Target Name="InstallPython" Condition="!Exists('$(PythonExe)')">
